# akinopallete

./: CMakeLists.txt  README.md
include/: pallete.h
src/: pallete.cpp
